crates/general/fixtures/invalid/separator_swaps.zt
[1, 2, 3]

[true, false, true]

["a", "b", "c"]

[#foo, #bar, #baz]

{ a = 1, b = 2, c = 3 }

{ host = "localhost", port = 8080, tls = true }

(#circle; radius = 5.0)

(#rect; width = 4.0; height = 3.0)

(#tagged; field = "value")

[1; 2; 3]

[1 2 3]

{ a = 1; b = 2; c = 3 }

{ a = 1. b = 2. c = 3. }

(#a,)

(#b, x = 1,)

[1; 2; 3;,]

server with { port = 9000; }

{ host = "x"; port = 8080 }

[1; 2; 3

(#just, value = 42

{ name = "test";

type [ #a, #b, #c ]

type [ #a; #b; #c, ]

[A, B;]

[A; B,]
